end of project 4

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
   <main>
     <section class="background">
-      <p class="copy-message"><span>HEX</span> code copied to your clipboard</p>
+      <p class="copy-message"><span>RGB</span> code copied to your clipboard</p>
       <div>
-        <p>HEX : <span class="color-code" data-code="HEX">#<span id="code-hex">0d0d0d</span></span></p>
         <p>RGB : <span class="color-code" data-code="RGB">rgb(<span id="code-rgb">13, 13, 13</span>)</span></p>
+        <p>HEX : <span class="color-code" data-code="HEX">#<span id="code-hex">0d0d0d</span></span></p>
         <p>Click on color code to copy</p>
         <button class="button">Generate color</button>
       </div>
